fixed the aa shift

--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ html{
     font-size: 140px;
     color: rgba(255, 255, 255, 0.425);
     position: absolute;
-    left: 60%;
-    top:0;
+    left: 220px;
+    top:120px;
     margin: 0px;  
 }
 .upper1> .pic-name, .upper2> .pic-name, .lower1> .pic-name, .lower2> .pic-name, .right-section> .pic-name{
